--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "devDependencies": {
     "angular": "1.6.10",
     "babel-loader": "^7.1.4",
+    "clean-webpack-plugin": "^0.1.19",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "start:dev": "webpack-dev-server"
+    "start": "webpack-dev-server --open --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC"
