--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "angular": "1.6.10",
     "babel-loader": "^7.1.4",
     "clean-webpack-plugin": "^0.1.19",
+    "concurrently": "^3.5.1",
+    "http-serve": "^1.0.1",
     "webpack": "^4.8.2",
     "webpack-cli": "^2.1.3",
     "webpack-dev-server": "^3.1.4",
     "webpack-merge": "^4.1.2"
   },
   "scripts": {
-    "start": "webpack-dev-server --open --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
+    "dev": "webpack --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "server": "http-server ./dist -a localhost -p 8000 -c-1",
+
+    "start": "concurrently \"npm run dev\" \"npm run server\""
   },
   "author": "",
   "license": "ISC"
